--- a/TicketTurno/src/components/Header.astro
+++ b/TicketTurno/src/components/Header.astro
@@ -1,13 +1,15 @@
 ---
 import Hamburger from "./Hamburger.astro";
+import LogoHeader from "./LogoHeader.astro";
 import Navigation from "./Navigation.astro";
 import ThemeIcon from "./ThemeIcon.astro";
 ---
 
-<header class="bg-slate-500 shadow-md">
+<header class="bg-green-800">
   <nav>
     <Hamburger />
-    <ThemeIcon />
+    <LogoHeader />
     <Navigation />
+    <ThemeIcon />
   </nav>
 </header>
