--- a/TicketTurno/src/layouts/BaseLayout.astro
+++ b/TicketTurno/src/layouts/BaseLayout.astro
@@ -7,7 +7,7 @@ import Footer from "../components/Footer.astro";
 import Header from "../components/Header.astro";
 ---
 
-<html lang="en">
+<html class="bg-green-600" lang="en">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
@@ -15,7 +15,7 @@ import Header from "../components/Header.astro";
     <meta name="generator" content={Astro.generator} />
     <title>{pageTitle}</title>
   </head>
-  <body>
+  <body class="m-0 w-5/5 max-w-mprose p-4 leading-normal">
     <Header />
 
     <h1>{pageTitle}</h1>
