--- a/TicketTurno/src/pages/index.astro
+++ b/TicketTurno/src/pages/index.astro
@@ -2,11 +2,13 @@
 import { getSession } from "auth-astro/server";
 import Greeting from "../components/Greeting";
 import BaseLayout from "../layouts/BaseLayout.astro";
+import { db } from "astro:db";
+
 const pageTitle = "Página de inicio";
 const session = await getSession(Astro.request);
 ---
 
-<BaseLayout pageTitle="Página de inicio">
+<BaseLayout pageTitle={pageTitle}>
   <nav class="m-2 p-4">
     <Greeting
       client:load
