ok, mejoro algo pero movere mucho

--- a/SegundaOpcion/app/templates/alumnos.html
+++ b/SegundaOpcion/app/templates/alumnos.html
@@ -1,3 +1,4 @@
 {% extends "base.html" %} {% block content %}
-<h1>Welcome to the Flask Appointment System</h1>
+<h2>Alumnos</h2>
+<p>Gestión de alumnos aquí.</p>
 {% endblock %}
