--- a/SegundaOpcion/app/templates/municipios.html
+++ b/SegundaOpcion/app/templates/municipios.html
@@ -1,3 +1,4 @@
 {% extends "base.html" %} {% block content %}
-<h1>Welcome to the Flask Appointment System</h1>
+<h2>Municipios</h2>
+<p>Gestión de municipios aquí.</p>
 {% endblock %}
