--- a/EXTRA/src/templates/auth/login.html
+++ b/EXTRA/src/templates/auth/login.html
@@ -1,10 +1,7 @@
-{% extends './base.html' %} {% block title %}Login{% endblock %} {% block
-customCSS %}
-<link
-  rel="stylesheet"
-  href="{{ url_for('static', filename='css/login.css') }}"
-/>
-{% endblock %} {% block body %}
+{% extends './base.html' %}
+    {% block title %}Login{% endblock %} 
+    {% block customCSS %}<link  rel="stylesheet"  href="{{ url_for('static', filename='css/login.css') }}"/>   {% endblock %}
+{% block body %}
 <form class="form-signin" action="/login" method="POST">
   <img
     class="mb-4"
@@ -28,6 +25,7 @@ customCSS %}
   {% endfor %} {% endif %} {% endwith %}
   <h1 class="h3 mb-3 fw-normal">Ticket de Turno</h1>
   <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
+  <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
   <div class="form-floating">
     <input
       type="text"
