ya casi se acaba el tiempo espero lograrlo

--- a/EXTRA/src/templates/views/alumnos.html
+++ b/EXTRA/src/templates/views/alumnos.html
@@ -2,7 +2,7 @@
 customCSS %} {% endblock %} {% block body %}
 
 <div class="container">
-  <h1 class="text-center">Home</h1>
-  <p class="text-center">Welcome to the home page!</p>
+  <h1 class="text-center">Alumnos</h1>
+  <p class="text-center">Welcome to the alumnos page!</p>
 </div>
 {% endblock %}
