--- a/EXTRA/src/static/css/login.css
+++ b/EXTRA/src/static/css/login.css
@@ -1,5 +1,6 @@
 html,
 body {
+  text-align: center;
   height: 100%;
   background: linear-gradient(to bottom right, #a8e063, #56ab2f); /* Degradado de verde claro a verde oscuro */
  
@@ -11,6 +12,7 @@ body {
   padding-top: 40px;
   padding-bottom: 40px;
   background-color: #f5f5f5;
+  text-align: center;
 }
 
 .form-signin {
