--- a/EXTRA/src/templates/base.html
+++ b/EXTRA/src/templates/base.html
@@ -80,5 +80,9 @@
     </style>
 
     {% endblock %} {% endif %}
+
+    <script>
+      import "../scripts/menu.js";
+    </script>
   </body>
 </html>
