--- a/EXTRA/src/templates/views/index.html
+++ b/EXTRA/src/templates/views/index.html
@@ -5,4 +5,10 @@ customCSS %} {% endblock %} {% block body %}
   <h1 class="text-center">Home</h1>
   <p class="text-center">Welcome to the home page!</p>
 </div>
+
+<style>
+  .text-center {
+    text-align: center;
+  }
+</style>
 {% endblock %}
