--- a/EXTRA/src/templates/navigation.html
+++ b/EXTRA/src/templates/navigation.html
@@ -85,4 +85,9 @@
     text-decoration: none;
     border-bottom-color: var(--accent);
   }
+
+  a.nav-link {
+    color: var(--black);
+    text-decoration: none;
+  }
 </style>
