--- a/EXTRA/src/templates/views/registro_cita.html
+++ b/EXTRA/src/templates/views/registro_cita.html
@@ -6,7 +6,7 @@ customCSS %} {% endblock %} {% block body %}
     <h1 class="title">Cita</h1>
 
     <div class="inputContainer">
-      <input type="text" class="input" placeholder="Quien Realiza" />
+      <input name="qr" id="qr" type="text" class="input" placeholder="Quien Realiza" />
       <label for="" class="label">Parentezco</label>
     </div>
 
@@ -51,7 +51,7 @@ customCSS %} {% endblock %} {% block body %}
         type="radio"
         id="pendiente"
         name="status"
-        value="HTML"
+        value="pendiente"
       />
       <label for="html">Pendiente</label><br />
       <input
@@ -59,7 +59,7 @@ customCSS %} {% endblock %} {% block body %}
         type="radio"
         id="resuelto"
         name="status"
-        value="CSS"
+        value="resuelto"
       />
       <label for="css">Resuleto</label><br />
     </div>
