ya se registra tanto en la tabla citas como en realiza

--- a/EXTRA/src/templates/views/registro_cita.html
+++ b/EXTRA/src/templates/views/registro_cita.html
@@ -70,17 +70,17 @@ customCSS %} {% endblock %} {% block body %}
         type="radio"
         id="status"
         name="status"
-        value="pendiente"
+        value="Pendiente"
       />
-      <label for="pendiente">Pendiente</label><br />
+      <label for="Pendiente">Pendiente</label><br />
       <input
         class="input"
         type="radio"
         id="status"
         name="status"
-        value="resuelto"
+        value="Resuelto"
       />
-      <label for="resuelto">Resuleto</label><br />
+      <label for="Resuelto">Resuleto</label><br />
     </div>
 
     {% endif %}
@@ -94,7 +94,8 @@ customCSS %} {% endblock %} {% block body %}
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 50vh;
+
+    margin: 50px;
   }
 
   .form {
