Se mando asi al profe

--- a/EXTRA/src/templates/navigation.html
+++ b/EXTRA/src/templates/navigation.html
@@ -5,6 +5,7 @@
   <div class="internal-links">
     <a class="nav-link" href="{{ url_for('home') }}">Home</a>
     <a class="nav-link" href="{{ url_for('registro_cita') }}">Registrar Cita</a>
+    <a class="nav-link" href="{{ url_for('consultacita') }}">Consulta Cita</a>
     <a class="nav-link" href="{{ url_for('municipios') }}">Municipios</a>
     <a class="nav-link" href="{{ url_for('alumnos') }}">Alumnos</a>
     <a class="nav-link" href="{{ url_for('about') }}">About</a>
