--- a/EXTRA/src/templates/base.html
+++ b/EXTRA/src/templates/base.html
@@ -7,7 +7,7 @@
     <title>{% block title %}{% endblock %}</title>
     <link
       rel="shortcut icon"
-      href="{{ url_for('static', filename='img/flask.svg') }}"
+      href="{{ url_for('static', filename='img/logoCoahuila.png') }}"
     />
     <!-- Bootstrap -->
     <link
