--- a/EXTRA/src/templates/views/about.html
+++ b/EXTRA/src/templates/views/about.html
@@ -1,4 +1,4 @@
-{% extends './base.html' %} {% block title %}Home{% endblock %} {% block
+{% extends './base.html' %} {% block title %}About{% endblock %} {% block
 customCSS %} {% endblock %} {% block body %}
 
 <div class="container">
