--- a/EXTRA/src/templates/views/municipios.html
+++ b/EXTRA/src/templates/views/municipios.html
@@ -1,9 +1,9 @@
-{% extends './base.html' %} {% block title %}Home{% endblock %} {% block
+{% extends './base.html' %} {% block title %}Municipios{% endblock %} {% block
 customCSS %} {% endblock %} {% block body %}
 
 <div class="signupFrm">
   <form action="" class="form">
-    <h1 class="title">Municipios</h1>
+    <h1 class="title">*** Aun no Habilitado ****</h1>
 
     <div class="inputContainer">
       <input
@@ -25,7 +25,7 @@ customCSS %} {% endblock %} {% block body %}
       <label for="" class="label">Asunto</label>
     </div>
 
-    <input type="submit" class="submitBtn" value="Sign up" />
+    <input type="submit" class="submitBtn" value="Guardar" />
   </form>
 </div>
 
