--- a/EXTRA/src/templates/views/registro_cita.html
+++ b/EXTRA/src/templates/views/registro_cita.html
@@ -1,5 +1,5 @@
-{% extends './base.html' %} {% block title %}Home{% endblock %} {% block
-customCSS %} {% endblock %} {% block body %}
+{% extends './base.html' %} {% block title %}Registro de Citas{% endblock %} {%
+block customCSS %} {% endblock %} {% block body %}
 
 <div class="signupFrm">
   <form action="/registro_cita" method="POST" class="form">
