--- a/EXTRA/src/templates/navigation.html
+++ b/EXTRA/src/templates/navigation.html
@@ -14,6 +14,7 @@
   <div class="internal-links">
     <a class="nav-link" href="{{ url_for('home') }}">Home</a>
     <a class="nav-link" href="{{ url_for('registro_cita') }}">Registrar Cita</a>
+    <a class="nav-link" href="{{ url_for('consulta_cita') }}">Consulta Cita</a>
     <a class="nav-link" href="{{ url_for('about') }}">About</a>
   </div>
   {% endif %}
