--- a/EXTRA/src/templates/views/ConsultaCita.html
+++ b/EXTRA/src/templates/views/ConsultaCita.html
@@ -10,28 +10,28 @@
     <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
 
     <div class="inputContainer">
-      <input name="numeroturno" id="numeroturno" type="number" class="input" placeholder="Ingrese Numero de Turno" value="{{ data.numeroturno }}" required />
-      <label for="" class="label">Numero de Turno</label>
+      <input name="numeroturno" id="numeroturno" type="number" class="input" placeholder="Ingrese Numero de Turno" value="{{ data.numeroturno or '' }}" required />
+      <label for="numeroturno" class="label">Numero de Turno</label>
     </div>
 
     <div class="inputContainer">
-      <input class="input" type="text" id="curp" name="curp" value="{{ data.curp }}" required pattern="^[A-Z]{1}[AEIOU]{1}[A-Z]{2}[0-9]{2}(0[1-9]|1[0-2])(0[1-9]|[12][0-9]|3[01])[HM]{1}(AS|BC|BS|CC|CL|CM|CS|CH|DF|DG|GT|GR|HG|JC|MC|MN|MS|NT|NL|OC|PL|QT|QR|SP|SL|SR|TC|TS|TL|VZ|YN|ZS|NE)[B-DF-HJ-NP-TV-Z]{3}[0-9A-Z]{1}[0-9]{1}$" title="Por favor, ingrese una CURP válida." />
-      <label for="" class="label">CURP Alumno</label>
+      <input class="input" type="text" id="curp" name="curp" value="{{ data.curp or '' }}" required pattern="^[A-Z]{1}[AEIOU]{1}[A-Z]{2}[0-9]{2}(0[1-9]|1[0-2])(0[1-9]|[12][0-9]|3[01])[HM]{1}(AS|BC|BS|CC|CL|CM|CS|CH|DF|DG|GT|GR|HG|JC|MC|MN|MS|NT|NL|OC|PL|QT|QR|SP|SL|SR|TC|TS|TL|VZ|YN|ZS|NE)[B-DF-HJ-NP-TV-Z]{3}[0-9A-Z]{1}[0-9]{1}$" title="Por favor, ingrese una CURP válida." />
+      <label for="curp" class="label">CURP Alumno</label>
     </div>
 
     <div class="inputContainer">
-      <input class="input" type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" value="{{ data.phone }}" />
-      <label for="" class="label">Telefono</label>
+      <input class="input" type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" value="{{ data.phone or '' }}" />
+      <label for="phone" class="label">Telefono</label>
     </div>
 
     <div class="inputContainer">
-      <input class="input" type="email" id="email" name="email" value="{{ data.email }}" />
-      <label for="" class="label">Correo</label>
+      <input class="input" type="email" id="email" name="email" value="{{ data.email or '' }}" />
+      <label for="email" class="label">Correo</label>
     </div>
 
     <div class="inputContainer">
-      <input class="input" type="text" id="asuntotratar" name="asuntotratar" value="{{ data.asuntotratar }}" />
-      <label for="" class="label">Asunto</label>
+      <input class="input" type="text" id="asuntotratar" name="asuntotratar" value="{{ data.asuntotratar or '' }}" />
+      <label for="asuntotratar" class="label">Asunto</label>
     </div>
 
     {% if current_user.is_authenticated %}
