--- a/EXTRA/src/templates/views/ConsultaCita.html
+++ b/EXTRA/src/templates/views/ConsultaCita.html
@@ -10,35 +10,35 @@
     <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
 
     <div class="inputContainer">
-      <input name="numeroturno" id="numeroturno" type="number" class="input" placeholder="Ingrese Numero de Turno" value="{{ data.numeroturno or '' }}" required />
+      <input name="numeroturno" id="numeroturno" type="number" class="input" placeholder="Ingrese Numero de Turno" value="{{ nt or '' }}" required />
       <label for="numeroturno" class="label">Numero de Turno</label>
     </div>
 
     <div class="inputContainer">
-      <input class="input" type="text" id="curp" name="curp" value="{{ data.curp or '' }}" required pattern="^[A-Z]{1}[AEIOU]{1}[A-Z]{2}[0-9]{2}(0[1-9]|1[0-2])(0[1-9]|[12][0-9]|3[01])[HM]{1}(AS|BC|BS|CC|CL|CM|CS|CH|DF|DG|GT|GR|HG|JC|MC|MN|MS|NT|NL|OC|PL|QT|QR|SP|SL|SR|TC|TS|TL|VZ|YN|ZS|NE)[B-DF-HJ-NP-TV-Z]{3}[0-9A-Z]{1}[0-9]{1}$" title="Por favor, ingrese una CURP válida." />
+      <input class="input" type="text" id="curp" name="curp" value="{{ cu or '' }}" required pattern="^[A-Z]{1}[AEIOU]{1}[A-Z]{2}[0-9]{2}(0[1-9]|1[0-2])(0[1-9]|[12][0-9]|3[01])[HM]{1}(AS|BC|BS|CC|CL|CM|CS|CH|DF|DG|GT|GR|HG|JC|MC|MN|MS|NT|NL|OC|PL|QT|QR|SP|SL|SR|TC|TS|TL|VZ|YN|ZS|NE)[B-DF-HJ-NP-TV-Z]{3}[0-9A-Z]{1}[0-9]{1}$" title="Por favor, ingrese una CURP válida." />
       <label for="curp" class="label">CURP Alumno</label>
     </div>
 
     <div class="inputContainer">
-      <input class="input" type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" value="{{ data.phone or '' }}" />
+      <input class="input" type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" value="{{ num or '' }}" />
       <label for="phone" class="label">Telefono</label>
     </div>
 
     <div class="inputContainer">
-      <input class="input" type="email" id="email" name="email" value="{{ data.email or '' }}" />
+      <input class="input" type="email" id="email" name="email" value="{{ correo or '' }}" />
       <label for="email" class="label">Correo</label>
     </div>
 
     <div class="inputContainer">
-      <input class="input" type="text" id="asuntotratar" name="asuntotratar" value="{{ data.asuntotratar or '' }}" />
+      <input class="input" type="text" id="asuntotratar" name="asuntotratar" value="{{ ast or '' }}" />
       <label for="asuntotratar" class="label">Asunto</label>
     </div>
 
     {% if current_user.is_authenticated %}
     <div class="inputContainer">
-      <input class="input" type="radio" id="status" name="status" value="Pendiente" {% if data.status == 'Pendiente' %}checked{% endif %} />
+      <input class="input" type="radio" id="status" name="status" value="Pendiente" {% if sta == 'Pendiente' %}checked{% endif %} />
       <label for="Pendiente">Pendiente</label><br />
-      <input class="input" type="radio" id="status" name="status" value="Resuelto" {% if data.status == 'Resuelto' %}checked{% endif %} />
+      <input class="input" type="radio" id="status" name="status" value="Resuelto" {% if sta == 'Resuelto' %}checked{% endif %} />
       <label for="Resuelto">Resuelto</label><br />
     </div>
     {% endif %}
@@ -69,6 +69,8 @@
   function consultarCita() {
     document.querySelector('form').action = '/consulta_cita';
     document.querySelector('form').submit();
+
+    
   }
 
   function modificarCita() {
